Cleaned up code formatting, updated README