@@ -9,7 +9,6 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RestaurantService {
@@ -34,7 +33,7 @@ public class RestaurantService {
         List<String> cuisines = restaurant.cuisines() != null ?
                 restaurant.cuisines().stream()
                         .map(Cuisine::name)
-                        .collect(Collectors.toList()) :
+                        .toList() :
                 List.of();
 
         double rating = (restaurant.rating() != null && restaurant.rating().starRating() != null) ?
